--- a/main.scss
+++ b/main.scss
@@ -4,3 +4,5 @@
 @import "./Sass/layouts";
 @import "./Sass/center-section";
 @import "./Sass/images";
+@import "./Sass/bottom-section";
+@import "./Sass/footer";
