--- a/Sass/_bottom-section.scss
+++ b/Sass/_bottom-section.scss
@@ -1,16 +1,30 @@
 .bottom {
-
+    margin-top: 80px;
+&-box-text {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+    &-title-box {
+        color: #294283;
+        font-family: 'Poppins';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 16px;
+            line-height: 24px;
+    }
     &-header {
         background-color: #4D6BB9;
         border-radius: 0px;
         width: 100%;
         display: flex;
-        align-content: space-around;
         padding-top: 50px;
         padding-bottom: 100px;
+        z-index: 0;
+        position: absolute;
 
         &-title {
-            text-indent: 250px;
+            text-indent: 100px;
             font-family: 'Poppins';
             font-style: normal;
             font-weight: 800;
@@ -19,7 +33,7 @@
             display: flex;
             align-items: center;
             color: #FFFFFF;
-
+            position: relative;
         }
     }
 
@@ -34,8 +48,18 @@
         background: #FFFFFF;
         box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
         border-radius: 30px;
-
-
+        margin-top: 30px;
+        z-index: 1;
+        position: relative;
+        margin-top: 201px;
+&-text {
+    font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        color: #404C6B;
+}
         &-img {
             display: block;
         }
