--- a/Sass/_center-section.scss
+++ b/Sass/_center-section.scss
@@ -32,15 +32,16 @@ flex-direction: column;
         background-image: url(../img/center-photo.png);
         width: 1200px;
         height: 440px;
-
+position: absolute;
 
     }
     &-wrapper {
-        
+        position: relative;
     }
 }
 
 .center-box2{
+    position: relative;
 display: flex;
 margin-left: auto;
 margin-right: auto;
