--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body {
   font-family: "Poppins";
   max-width: 1903px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header-btn-1 {
@@ -119,8 +121,14 @@ body {
   background-image: url(../img/center-photo.png);
   width: 1200px;
   height: 440px;
+  position: absolute;
 }
+.center-box1-wrapper {
+  position: relative;
+}
+
 .center-box2 {
+  position: relative;
   display: flex;
   margin-left: auto;
   margin-right: auto;
@@ -161,17 +169,34 @@ body {
   margin-left: 350px;
 }
 
+.bottom {
+  margin-top: 80px;
+}
+.bottom-box-text {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.bottom-title-box {
+  color: #294283;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 24px;
+}
 .bottom-header {
   background-color: #4D6BB9;
   border-radius: 0px;
   width: 100%;
   display: flex;
-  align-content: space-around;
   padding-top: 50px;
   padding-bottom: 100px;
+  z-index: 0;
+  position: absolute;
 }
 .bottom-header-title {
-  text-indent: 250px;
+  text-indent: 100px;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 800;
@@ -180,6 +205,7 @@ body {
   display: flex;
   align-items: center;
   color: #FFFFFF;
+  position: relative;
 }
 .bottom-wrapper {
   display: flex;
@@ -191,6 +217,18 @@ body {
   background: #FFFFFF;
   box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
   border-radius: 30px;
+  margin-top: 30px;
+  z-index: 1;
+  position: relative;
+  margin-top: 201px;
+}
+.bottom-boxes-text {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #404C6B;
 }
 .bottom-boxes-img {
   display: block;
@@ -220,6 +258,23 @@ body {
 .footer {
   margin-top: 100px;
 }
+.footer-btn {
+  border: 3px solid #4D6BB9;
+  border-radius: 61px;
+  padding: 10px 4px;
+  width: 50%;
+  cursor: pointer;
+}
+.footer-title {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 60px;
+  line-height: 118.5%;
+  display: flex;
+  align-items: center;
+  color: #4D6BB9;
+}
 .footer-title-box {
   display: flex;
   justify-content: center;
@@ -234,15 +289,29 @@ body {
   display: flex;
   flex-direction: column;
   gap: 14px;
+  align-items: center;
 }
 .footer-list {
   text-decoration: none;
   list-style: none;
   display: flex;
   flex-direction: column;
+  gap: 30px;
+}
+.footer-list-link {
+  color: #4D6BB9;
+  text-decoration: none;
+  list-style-type: none;
 }
 .footer-wrapper {
   display: flex;
   justify-content: center;
   margin-top: 50px;
+}
+.footer-bottom {
+  height: 145px;
+  background: #2D3751;
+  border-radius: 0px;
+  margin-top: 50px;
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
