--- a/Sass/_bottom-section.scss
+++ b/Sass/_bottom-section.scss
@@ -1,30 +1,34 @@
 .bottom {
     margin-top: 80px;
-&-box-text {
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-}
+
+    &-box-text {
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+
     &-title-box {
         color: #294283;
         font-family: 'Poppins';
-            font-style: normal;
-            font-weight: 900;
-            font-size: 16px;
-            line-height: 24px;
+        font-style: normal;
+        font-weight: 900;
+        font-size: 16px;
+        line-height: 24px;
     }
+
     &-header {
         background-color: #4D6BB9;
         border-radius: 0px;
-        width: 100%;
+        width: 1903px;
         display: flex;
         padding-top: 50px;
         padding-bottom: 100px;
         z-index: 0;
         position: absolute;
 
+
         &-title {
-            text-indent: 100px;
+            text-indent: 352px;
             font-family: 'Poppins';
             font-style: normal;
             font-weight: 800;
@@ -52,17 +56,23 @@
         z-index: 1;
         position: relative;
         margin-top: 201px;
-&-text {
-    font-family: 'Poppins';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 20px;
-        color: #404C6B;
-}
+
+        &-text {
+            font-family: 'Poppins';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 20px;
+            color: #404C6B;
+        }
+
         &-img {
             display: block;
         }
+    }
+
+    &-btn:hover {
+        background-color: #031952;
     }
 
     &-btn {
