--- a/Sass/_buttons.scss
+++ b/Sass/_buttons.scss
@@ -1,15 +1,20 @@
 .header-btn-1 {
     background: #EFD063;
-        border-radius: 30px 30px 0px 0px;
-        padding: 22px 45px;
-        border: none;
-        cursor: pointer;
+    border-radius: 30px 30px 0px 0px;
+    padding: 22px 45px;
+    border: none;
+    cursor: pointer;
+}
+
+.header-btn-1:hover {
+    background-color: #031952;
+    color: #fff;
 }
 
 .header-btn-2 {
     border: none;
     cursor: pointer;
-    background-color:#4D6BB9;;
+    background-color: #4D6BB9;
     color: #fff;
 }
 
@@ -17,20 +22,33 @@
     display: flex;
     gap: 36px;
     margin-top: 65px;
-    margin-right: 190px;
+}
+
+.btn-2-bg {
+    color: #4D6BB9;
+    background-color: #fff;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 118.5%;
 }
 
 .center-box2-btn {
     background: #4D6BB9;
-        border-radius: 30px 30px 0px 0px;
-        padding: 22px 45px;
-        border: none;
-        color: #fff;
-        font-weight: 700;
-            font-size: 14px;
-            line-height: 118.5%;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            cursor: pointer;
+    border-radius: 30px 30px 0px 0px;
+    padding: 22px 45px;
+    border: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 118.5%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    cursor: pointer;
+}
+
+.center-box2-btn:hover {
+    background-color: #031952;
 }
