--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Poppins";
-  max-width: 1903px;
+  width: 1903px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -11,6 +11,11 @@ body {
   padding: 22px 45px;
   border: none;
   cursor: pointer;
+}
+
+.header-btn-1:hover {
+  background-color: #031952;
+  color: #fff;
 }
 
 .header-btn-2 {
@@ -24,7 +29,16 @@ body {
   display: flex;
   gap: 36px;
   margin-top: 65px;
-  margin-right: 190px;
+}
+
+.btn-2-bg {
+  color: #4D6BB9;
+  background-color: #fff;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 118.5%;
 }
 
 .center-box2-btn {
@@ -42,13 +56,18 @@ body {
   cursor: pointer;
 }
 
-.header-section {
-  width: 1900px;
-  background-image: url(../img/header-photo.png);
+.center-box2-btn:hover {
+  background-color: #031952;
 }
 
+.header-section {
+  background-image: url(../img/header-photo.png);
+}
+.header-wrapper-box {
+  position: relative;
+}
 .header-box {
-  width: 880px;
+  max-width: 880px;
   background: #4D6BB9;
   border-radius: 0px 30px 0px 0px;
   display: flex;
@@ -59,16 +78,53 @@ body {
   flex-direction: column;
   align-content: flex-end;
 }
-
+.header-box-2 {
+  max-width: 622px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
+  border-radius: 30px;
+  position: absolute;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+  top: calc(50% + 240px);
+  left: calc(60% + 100px);
+  padding-left: 75px;
+  padding-top: 30px;
+  padding-right: 140px;
+}
+.header-box2-textwrapper {
+  width: 368px;
+}
+.header-box2-text {
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  color: #4F4F4F;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 118.5%;
+}
+.header-box2-title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 60px;
+  line-height: 118.5%;
+  display: flex;
+  align-items: center;
+  color: #4D6BB9;
+  white-space: nowrap;
+}
 .header-text {
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
   line-height: 118.5%;
-  /* or 17px */
   color: #FFFFFF;
+  text-align: left;
+  margin: 0;
+  padding: 0;
 }
-
 .header-title {
   margin-bottom: 30px;
   margin-right: 55px;
@@ -76,7 +132,6 @@ body {
   font-weight: 800;
   font-size: 60px;
   line-height: 118.5%;
-  /* identical to box height, or 71px */
   display: flex;
   align-items: center;
   color: #FFFFFF;
@@ -88,16 +143,15 @@ body {
 }
 
 .center-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  margin-top: 140px;
 }
 
 .center-box1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 160px;
 }
 .center-box1-title {
   font-style: normal;
@@ -116,18 +170,26 @@ body {
   line-height: 18px;
   color: #4F4F4F;
   width: 400px;
+  text-align: left;
+  margin: 0;
+  padding: 0;
 }
 .center-box1-bgimg {
   background-image: url(../img/center-photo.png);
   width: 1200px;
   height: 440px;
   position: absolute;
+  transform: translate(0%, 40%);
+  z-index: 0;
 }
 .center-box1-wrapper {
   position: relative;
+  margin-bottom: 125px;
+  margin-left: -800px;
 }
 
 .center-box2 {
+  width: 622px;
   position: relative;
   display: flex;
   margin-left: auto;
@@ -188,7 +250,7 @@ body {
 .bottom-header {
   background-color: #4D6BB9;
   border-radius: 0px;
-  width: 100%;
+  width: 1903px;
   display: flex;
   padding-top: 50px;
   padding-bottom: 100px;
@@ -196,7 +258,7 @@ body {
   position: absolute;
 }
 .bottom-header-title {
-  text-indent: 100px;
+  text-indent: 352px;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 800;
@@ -233,6 +295,9 @@ body {
 .bottom-boxes-img {
   display: block;
 }
+.bottom-btn:hover {
+  background-color: #031952;
+}
 .bottom-btn {
   background: #4D6BB9;
   border-radius: 30px;
@@ -264,6 +329,10 @@ body {
   padding: 10px 4px;
   width: 50%;
   cursor: pointer;
+}
+.footer-btn:hover {
+  background-color: #212dda;
+  color: #fff;
 }
 .footer-title {
   font-family: "Poppins";
@@ -302,11 +371,22 @@ body {
   color: #4D6BB9;
   text-decoration: none;
   list-style-type: none;
+  font-family: "TT Hoves";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
+  gap: 20px;
+}
+.footer-list-link:hover {
+  color: #062572;
 }
 .footer-wrapper {
   display: flex;
   justify-content: center;
   margin-top: 50px;
+  gap: 50px;
 }
 .footer-bottom {
   height: 145px;
