--- a/Sass/_buttons.scss
+++ b/Sass/_buttons.scss
@@ -18,6 +18,12 @@
     color: #fff;
 }
 
+.header-btn-2:hover {
+    color: rgb(240, 240, 240);
+    background-color: #061c9e;
+    border-radius: 30px 30px 0px 0px;
+}
+
 .btn-wrapper {
     display: flex;
     gap: 36px;
