--- a/Sass/_bottom-section.scss
+++ b/Sass/_bottom-section.scss
@@ -1,6 +1,27 @@
 .bottom {
     margin-top: 80px;
 
+    &-first-box {
+        width: 385px;
+        box-shadow: 0px 4px 50px rgba(77, 107, 185, .15);
+        border-radius: 30px;
+        z-index: 1;
+        position: relative;
+        margin-top: 50px;
+    }
+
+    &-above-title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 60px;
+        line-height: 118.5%;
+        display: flex;
+        align-items: center;
+        color: #FFFFFF;
+        position: relative;
+    }
+
     &-box-text {
         margin-left: 30px;
         margin-right: 30px;
@@ -19,26 +40,13 @@
     &-header {
         background-color: #4D6BB9;
         border-radius: 0px;
-        width: 1903px;
+        width: 100%;
         display: flex;
         padding-top: 50px;
         padding-bottom: 100px;
         z-index: 0;
         position: absolute;
-
-
-        &-title {
-            text-indent: 352px;
-            font-family: 'Poppins';
-            font-style: normal;
-            font-weight: 800;
-            font-size: 60px;
-            line-height: 118.5%;
-            display: flex;
-            align-items: center;
-            color: #FFFFFF;
-            position: relative;
-        }
+        height: 221px;
     }
 
     &-wrapper {
@@ -49,13 +57,13 @@
 
     &-boxes {
         width: 385px;
-        background: #FFFFFF;
+
         box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
         border-radius: 30px;
         margin-top: 30px;
         z-index: 1;
         position: relative;
-        margin-top: 201px;
+        margin-top: 221px;
 
         &-text {
             font-family: 'Poppins';
@@ -97,5 +105,57 @@
             justify-content: center;
         }
 
+    }
+
+    // Adaptive media styles
+    @media screen and (max-width: 1360px) {
+        &-wrapper {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &-header {
+            border-radius: 0px;
+            width: 100%;
+            display: flex;
+            padding-top: 50px;
+            padding-bottom: 100px;
+            z-index: 0;
+            position: absolute;
+            justify-content: center;
+            height: 221px;
+        }
+
+        &-above-title {
+            font-family: "Poppins";
+            font-style: normal;
+            font-weight: 800;
+            font-size: 60px;
+            line-height: 118.5%;
+            color: #fff;
+            text-indent: 0;
+        }
+
+        &-first-box {
+            width: 385px;
+            box-shadow: 0px 4px 50px rgba(77, 107, 185, .15);
+            border-radius: 30px;
+            margin-top: 30px;
+            z-index: 1;
+            position: relative;
+            margin-top: 50px;
+        }
+
+        &-boxes {
+            width: 385px;
+            box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
+            border-radius: 30px;
+            margin-top: 30px;
+            z-index: 1;
+            position: relative;
+            margin-top: 50px;
+        }
     }
 }
