--- a/Sass/_center-section.scss
+++ b/Sass/_center-section.scss
@@ -47,7 +47,27 @@
         margin-bottom: 125px;
         margin-left: -800px;
     }
+
+    // Adaptive media styles
+    @media screen and (max-width: 1350px) {
+        &-bgimg {
+            background-image: url(../img/center-photo.png);
+            width: 1020px;
+            height: 440px;
+            position: absolute;
+            transform: translate(0%, 40%);
+            z-index: 0;
+        }
+
+        &-wrapper {
+            position: relative;
+            margin-bottom: 125px;
+            margin-left: -550px;
+        }
+
+    }
 }
+
 
 .center-box2 {
     width: 622px;
@@ -87,4 +107,5 @@
         width: 520px;
         margin-bottom: 30px;
     }
+
 }
