--- a/Sass/_layouts.scss
+++ b/Sass/_layouts.scss
@@ -86,6 +86,42 @@
         align-items: center;
         color: #FFFFFF;
     }
+
+    // Styles for adaptive resolution
+    @media screen and (max-width: 1830px) {
+        &-wrapper-box {
+            margin-top: 200px;
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
+        &-box {
+            max-width: 880px;
+            background: #4d6bb9;
+            border-radius: 0px 30px 0px 0px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-end;
+            padding-left: 20px;
+            flex-direction: column;
+            align-content: flex-end;
+        }
+
+        &-box-2 {
+            max-width: 622px;
+            margin-top: 100px;
+            background: #fff;
+            box-shadow: 0px 4px 50px rgba(77, 107, 185, .15);
+            border-radius: 30px;
+            z-index: 1;
+            padding-left: 50px;
+            padding-top: 50px;
+            padding-right: 50px;
+
+        }
+    }
 }
 
 .text-box {
