--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 body {
   font-family: "Poppins";
-  width: 1903px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -142,6 +141,37 @@ body {
   align-items: center;
   color: #FFFFFF;
 }
+@media screen and (max-width: 1830px) {
+  .header-wrapper-box {
+    margin-top: 200px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .header-box {
+    max-width: 880px;
+    background: #4d6bb9;
+    border-radius: 0px 30px 0px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    padding-left: 20px;
+    flex-direction: column;
+    align-content: flex-end;
+  }
+  .header-box-2 {
+    max-width: 622px;
+    margin-top: 100px;
+    background: #fff;
+    box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
+    border-radius: 30px;
+    z-index: 1;
+    padding-left: 50px;
+    padding-top: 50px;
+    padding-right: 50px;
+  }
+}
 
 .text-box {
   width: 370px;
@@ -193,6 +223,21 @@ body {
   margin-bottom: 125px;
   margin-left: -800px;
 }
+@media screen and (max-width: 1350px) {
+  .center-box1-bgimg {
+    background-image: url(../img/center-photo.png);
+    width: 1020px;
+    height: 440px;
+    position: absolute;
+    transform: translate(0%, 40%);
+    z-index: 0;
+  }
+  .center-box1-wrapper {
+    position: relative;
+    margin-bottom: 125px;
+    margin-left: -550px;
+  }
+}
 
 .center-box2 {
   width: 622px;
@@ -240,6 +285,25 @@ body {
 .bottom {
   margin-top: 80px;
 }
+.bottom-first-box {
+  width: 385px;
+  box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
+  border-radius: 30px;
+  z-index: 1;
+  position: relative;
+  margin-top: 50px;
+}
+.bottom-above-title {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 60px;
+  line-height: 118.5%;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  position: relative;
+}
 .bottom-box-text {
   margin-left: 30px;
   margin-right: 30px;
@@ -256,24 +320,13 @@ body {
 .bottom-header {
   background-color: #4D6BB9;
   border-radius: 0px;
-  width: 1903px;
+  width: 100%;
   display: flex;
   padding-top: 50px;
   padding-bottom: 100px;
   z-index: 0;
   position: absolute;
-}
-.bottom-header-title {
-  text-indent: 352px;
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 800;
-  font-size: 60px;
-  line-height: 118.5%;
-  display: flex;
-  align-items: center;
-  color: #FFFFFF;
-  position: relative;
+  height: 221px;
 }
 .bottom-wrapper {
   display: flex;
@@ -282,13 +335,12 @@ body {
 }
 .bottom-boxes {
   width: 385px;
-  background: #FFFFFF;
   box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
   border-radius: 30px;
   margin-top: 30px;
   z-index: 1;
   position: relative;
-  margin-top: 201px;
+  margin-top: 221px;
 }
 .bottom-boxes-text {
   font-family: "Poppins";
@@ -325,9 +377,59 @@ body {
   display: flex;
   justify-content: center;
 }
+@media screen and (max-width: 1360px) {
+  .bottom-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .bottom-header {
+    border-radius: 0px;
+    width: 100%;
+    display: flex;
+    padding-top: 50px;
+    padding-bottom: 100px;
+    z-index: 0;
+    position: absolute;
+    justify-content: center;
+    height: 221px;
+  }
+  .bottom-above-title {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 800;
+    font-size: 60px;
+    line-height: 118.5%;
+    color: #fff;
+    text-indent: 0;
+  }
+  .bottom-first-box {
+    width: 385px;
+    box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
+    border-radius: 30px;
+    margin-top: 30px;
+    z-index: 1;
+    position: relative;
+    margin-top: 50px;
+  }
+  .bottom-boxes {
+    width: 385px;
+    box-shadow: 0px 4px 50px rgba(77, 107, 185, 0.15);
+    border-radius: 30px;
+    margin-top: 30px;
+    z-index: 1;
+    position: relative;
+    margin-top: 50px;
+  }
+}
 
 .footer {
   margin-top: 100px;
+}
+.footer-form {
+  background-color: #F2F2F2;
+  padding-bottom: 50px;
 }
 .footer-btn {
   border: 3px solid #4D6BB9;
@@ -402,6 +504,5 @@ body {
   height: 145px;
   background: #2D3751;
   border-radius: 0px;
-  margin-top: 50px;
   width: 100%;
 }/*# sourceMappingURL=main.css.map */
